<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/dollar_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dollar_sign"
        app:layout_constraintRight_toLeftOf="@+id/dollars"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/payOffButton" />

    <EditText
        android:id="@+id/dollars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_0"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:inputType="number"
        app:layout_constraintRight_toLeftOf="@+id/decimal"
        app:layout_constraintLeft_toRightOf="@+id/dollar_sign"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/payOffButton"
        android:imeOptions="actionNext|flagNoExtractUi"/>

    <TextView
        android:id="@+id/decimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decimal_point"
        app:layout_constraintRight_toLeftOf="@+id/cents"
        app:layout_constraintLeft_toRightOf="@+id/dollars"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/payOffButton"/>

    <EditText
        android:id="@+id/cents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_00"
        android:maxLength="2"
        android:selectAllOnFocus="true"
        android:inputType="number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/decimal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/payOffButton"
        android:imeOptions="flagNoExtractUi"/>

    <Button
        android:id="@+id/payOffButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_off_this_amount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cents"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payOffButton"/>

</android.support.constraint.ConstraintLayout>