<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/dollar_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dollar_sign"
        app:layout_constraintRight_toLeftOf="@+id/dollar_cent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/payOffButton" />

    <EditText
        android:id="@+id/dollar_cent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_0_00"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/dollar_sign"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/payOffButton"
        android:imeOptions="actionNext|flagNoExtractUi"/>

    <Button
        android:id="@+id/payOffButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_off_this_amount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dollar_cent"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payOffButton"/>
</android.support.constraint.ConstraintLayout>