<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main"
    tools:context=".DebtCollectorActivity">

    <TextView
        android:id="@+id/current_debt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/current_debt_value"
        android:textSize="30sp"
        android:text="@string/current_debt" />

    <TextView
        android:id="@+id/current_debt_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_debt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/payOffButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/payOffButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_off_debt"
        app:layout_constraintLeft_toRightOf="@+id/addButton"
        app:layout_constraintRight_toLeftOf="@+id/newTotalButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/newTotalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_new_total"
        app:layout_constraintLeft_toRightOf="@+id/payOffButton"
        app:layout_constraintRight_toLeftOf="@+id/undoButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/undoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undo"
        app:layout_constraintLeft_toRightOf="@+id/newTotalButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>